# MCell-Test-Framework

./: Makefile.am  README.md  configure  configure.ac
examples/macromols/: 01-macro.mdl  01-macro.py  01-macro.py~  01-macro_nonmixed.mdl  02-macro_surface.mdl  02-macro_surface.py  03-macro_surface_listrelease.mdl  03-macro_surface_listrelease.py  04-macro_surface_init.mdl  04-macro_surface_init.py  invalid.py  invalid.py~
examples/reactions/: 01-volume_highconc.mdl  02-volume_highconc_noacc3d.mdl  03-surface.mdl  03-surface.py~  04-surface.mdl  06-surface.mdl  07-region_borders.mdl  08-region_borders.mdl  09-region_borders.mdl  09-region_borders.py  10-surf_properties_all_molecules.mdl  11-surf_properties_all_volume_molecules.mdl  12-all_enclosed_test.mdl  13-restricted_border_reaction.mdl  13-restricted_border_reaction.py  14-restricted_border_product_placement.mdl  14-restricted_border_product_placement.py  15-overlappingSRs.mdl  15-overlappingSRs.py  15-overlappingSRs.py~  16-surf_products_replace_reactants.mdl  16-surf_products_replace_reactants.py
examples/regression/: 01-remove_per_species_list_from_ht.py~  02-orientflipflip_rxn.mdl  02-orientflipflip_rxn.mdl~  02-orientflipflip_rxn.py~  03-coincident_surfaces.mdl  04-rx_flipflip.mdl  04-rx_flipflip.py  05-rx_dissociate_inwards.mdl  05-rx_dissociate_inwards.py  05-rx_dissociate_inwards.py~  07-volvol_crash.py  08-find_corresponding_region.py  08-find_corresponding_region.py~  09-incorrect_times_in_chkpt.py~  16-mol_surf_crash.mdl  (+26 more)
include/: average.h  average.h~  b_string.h  b_string.h~  config.hpp  data_column.hpp  data_column.hpp~  data_table.hpp  data_table.hpp~  double_table_reader.h  double_table_reader.h~  file_lexer.h  memoized_lexer.hpp  operators.h  platform.h  python_interface.hpp  python_interface.hpp~  range.hpp  range.hpp~  scanner.h  scanner_base.h  scheduler_interface.h  scheduler_interface.h~  script_file_parser.h  script_manager.h  script_manager.h~  table_lexer.h  table_lexer.h~  test_interface.h  test_interface.h~  token.h
man/: TestMCell  TestMCell~
source/: main.cpp  python_interface.cpp  python_interface.hpp  query_parser.cpp  query_parser.h
src/: main.cpp  python_interface.cpp  query_parser.cpp  scheduler_interface.h  script_manager.cpp  script_manager.h
(+103 files in other folders)
